--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,7 +86,7 @@ FixedFrameRate=60.000000
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=29CC838448933790AA5D37AFF8B58EBA
+SecurityToken=
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
